Fixed an issue where the dice webpage was not responsive

--- a/Dice_Roll/styles.css
+++ b/Dice_Roll/styles.css
@@ -12,6 +12,7 @@
 
 body {
   background-image: linear-gradient(to right top, #0a2a43, #1b1e32, #1c1521, #150b12, #000000);
+  height: 30px;
 }
 
 h1 {
